test/invalid-syntax/58248_ending_in_semicolon/ending_in_semicolon.mag
-- Author: 58248, Afonso Topa 
-- A function can't end with a semicolon

fun main(_) : Unit -> Unit =
    print(8);   
